--- a/src/main/resources/templates/menu/product/updateForm.html
+++ b/src/main/resources/templates/menu/product/updateForm.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="layouts/layout :: layoutFragment(~{::main})" xmlns:th="https://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Good</title>
+
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/css/bootstrap.css">
+        
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/vendor/animate/animate.css">
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/css/bootstrap.css">
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/css/maicons.css">
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/vendor/owl-carousel/css/owl.carousel.css">
+        <link rel="stylesheet" href="../goodshop/src/main/resources/static/css/theme.css">
+
+        <style>
+            .fieldError {
+                border-color: #bd2130;
+            }
+        </style>
+    </head>
+
 <main>
     <div class="page-section">
-        <div class="container">
-            <h2 class="login"><b>상품수정</b></h2>
+        <div class="container" >
+            <h2 class="login text-center"> <b>상품수정</b></h2>
             <form method="post" th:object="${product}" enctype="multipart/form-data">
                 <input type="hidden" th:field="*{pdct_code}">
                 <div class="row mb-3">
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_name}" th:placeholder="상품이름" th:class="${#fields.hasErrors('pdct_name')} ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_name')}" th:errors="*{pdct_name}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_price}" th:placeholder="상품가격"   th:class="${#fields.hasErrors('pdct_price')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_price')}" th:errors="*{pdct_price}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_quantity}" th:placeholder="상품재고"  th:class="${#fields.hasErrors('pdct_quantity')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_quantity')}" th:errors="*{pdct_quantity}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <img th:src="|/images/${image.getPdct_image()}|" height="200" alt="">
                         <input type="file" class="form-control" th:field="*{pdct_image}" th:class="${#fields.hasErrors('pdct_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_image')}" th:errors="*{pdct_image}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <img th:src="|/images/${image.getDetail_image()}|" height="400" alt="">
                         <input type="file" class="form-control" th:field="*{detail_image}" th:placeholder="상세이미지" th:class="${#fields.hasErrors('detail_image')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('detail_image')}" th:errors="*{detail_image}">Incorrect date</p>
                     </div>
-                    <div class="col-sm-4 login-id">
+                    <div class="col-sm-5 login-id">
                         <input type="text" class="form-control" th:field="*{pdct_detail}" th:placeholder="상세설명" th:class="${#fields.hasErrors('pdct_detail')}  ? 'form-control fieldError' : 'form-control'">
                         <p th:if="${#fields.hasErrors('pdct_detail')}" th:errors="*{pdct_detail}">Incorrect date</p>
                     </div>
